--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
      */
     "allowJs": true,
     "checkJs": true,
-    "moduleDetection": "force"
+    "moduleDetection": "force",
     "typeRoot": [
       "types",
       "@turbowarp/types"
