--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-    "lib": ["DOM"],
+    "lib": ["DOM", "ESNext"],
     "target": "ES2022",
     "useDefineForClassFields": true,
     "module": "ESNext",
@@ -15,16 +15,12 @@
      */
     "allowJs": true,
     "checkJs": true,
-    "moduleDetection": "force",
     "typeRoots": [
       "types",
       "node_modules/@turbowarp/types",
       "node_modules/@types"
-    ]
+    ],
+    "types": ["global", "index"]
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.js",
-    "src/**/*.svelte"
-  ]
+  "include": ["src/**/*.ts", "src/**/*.js", "src/**/*.svelte"]
 }
