--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,10 @@ permissions:
 on:
     push:
         branches: ['main']
-        exclude: "*.md"
+        paths: 
+            - 'src/**'
+            - 'vite.config.ts'
+            - '.github/**'
 
 jobs:
     build:
