--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,6 +11,7 @@ on:
             - 'src/**'
             - 'vite.config.ts'
             - '.github/**'
+            - 'plugins/**'
 
 jobs:
     build:
